--- a/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
+++ b/.github/ISSUE_TEMPLATE/FEATURE_REQUEST.yml
@@ -1,8 +1,9 @@
-name: Feature request
-description: Suggest an idea for this project
-labels: [type:enhancement]
+name: "Feature request"
+description: "Suggest an idea for this project"
+labels:
+  - "type:enhancement"
 body:
-  - type: markdown
+  - type: "markdown"
     attributes:
       value: |
         Before opening a feature request, please check if a similar request already exists or has been closed before.
@@ -11,23 +12,23 @@ body:
 
         ---
 
-  - type: textarea
-    id: description
+  - type: "textarea"
     attributes:
-      label: Detailed Description
-      description: Provide a detailed description of the change or addition you are proposing
-      placeholder: Tell us what should happen
+      label: "Detailed Description"
+      description: "Provide a detailed description of the change or addition you are proposing"
+      placeholder: "Describe the feature or change you are proposing"
+    id: "description"
 
-  - type: textarea
-    id: context
+  - type: "textarea"
     attributes:
-      label: Context
-      description: Why is this change important to you? How would you use it? How can it benefit other users?
-      placeholder: Help us understand the context for this enhancement. What are you trying to accomplish? How has this affected you? What alternatives have you considered?
+      label: "Context"
+      description: "Why is this change important to you? How would you use it? How can it benefit other users?"
+      placeholder: "Help us understand the context for this enhancement. What are you trying to accomplish? How has this affected you? What alternatives have you considered?"
+    id: "context"
 
-  - type: textarea
-    id: solution
+  - type: "textarea"
     attributes:
-      label: Possible Solution
-      description: Not obligatory, but suggest an idea for implementing addition or change
-      placeholder: How might we implement this feature or improvement?
+      label: "Possible Solution"
+      description: "Not obligatory, but suggest an idea for implementing addition or change"
+      placeholder: "How might we implement this feature or improvement?"
+    id: "solution"
