--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -13,40 +13,42 @@ body:
         ---
 
   - type: "textarea"
+    id: "description"
     attributes:
       label: "Bug Description"
       description: "Provide a detailed introduction to the issue itself, and why you consider it to be a bug"
       placeholder: "Describe the bug in detail"
-    id: "description"
+    validations:
+      required: true
 
   - type: "textarea"
+    id: "context"
     attributes:
       label: "Context"
       description: "How has this bug affected you? What were you trying to accomplish?"
       placeholder: "Describe how this bug has affected you"
-    id: "context"
 
   - type: "textarea"
+    id: "expected-behavior"
     attributes:
       label: "Expected Behavior"
       description: "Tell us what you expected to happen"
       placeholder: "Describe what you expected to happen"
-    id: "expected-behavior"
 
   - type: "textarea"
+    id: "steps"
     attributes:
       label: "Steps to reproduce"
       description: "Which steps do we need to take to reproduce this error? Provide a link to a live example, or an unambiguous set of steps to reproduce this bug. Include code to reproduce, if relevant."
       placeholder: "Describe the steps to reproduce the bug"
-    id: "steps"
 
   - type: "textarea"
+    id: "logs"
     attributes:
       label: "Relevant log output"
       description: "If applicable, provide relevant log output. No need for backticks here."
       placeholder: "Provide any relevant log output here"
       render: "shell"
-    id: "logs"
 
   - type: "textarea"
     id: "solution"
