--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,3 +3,6 @@ contact_links:
   - name: Strike Engineering Team
     url: https://zapsolutionsinc.slack.com/archives/C037ZKTFH8W
     about: Please ask and answer questions here.
+  - name: Strike Developer Portal
+    url: https://backstage.live.zaphq.io/
+    about: Please search our documentation here.
